--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <tr>
             <th>
                 <div>
-                    <img id="image" ; src="src/img/1643792187733.jpg">
+                    <img id="image" src="src/img/1643792187733.jpg">
                 </div>
             </th>
 
