--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <html lang="en">
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="src/css/css.css">
