--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class="menu">
         <a class="active" href="index.html">Home</a>
         <a href="src/pages/interests.html">Interests</a>
-        <a href="series.html">Film/TV</a>
-        <a href="music.html">Music</a>
+        <a href="src/pages/series.html">Film/TV</a>
+        <a href="src/pages/music.html">Music</a>
+        <a href="src/pages/tpsit.html">TPSIT</a>
     </div>
 
     <table>
