--- a/src/pages/series.html
+++ b/src/pages/series.html
@@ -15,6 +15,7 @@
         <a href="interests.html">Interests</a>
         <a class="active" href="#media">Film/TV</a>
         <a href="music.html">Music</a>
+        <a href="tpsit.html">TPSIT</a>
     </div>
 
     <header>
