--- a/src/pages/interests.html
+++ b/src/pages/interests.html
@@ -15,6 +15,7 @@
         <a class="active" href="#interests">Interests</a>
         <a href="series.html">FIlm/TV</a>
         <a href="music.html">Music</a>
+        <a href="tpsit.html">TPSIT</a>
     </div>
 
     <header>
