--- a/src/pages/music.html
+++ b/src/pages/music.html
@@ -15,6 +15,7 @@
         <a href="interests.html">Interests</a>
         <a href="series.html">Film/TV</a>
         <a class="active" href="#music">Music</a>
+        <a href="tpsit.html">TPSIT</a>
     </div>
 
     <header>
