--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="src/css/css.css">
-    <link rel="icon" type="image/png" href="https://www.iconfinder.com/icons/669948/download/png/128">
+    <link rel="icon" type="image/png" href="src/img/ico.png">
 </head>
 
 <body id="background" background="src/img/bg1.jpg">
