--- a/src/pages/music.html
+++ b/src/pages/music.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Music</title>
     <link rel="stylesheet" href="src/css/interests.css">
-    <link rel="icon" type="image/png" href="https://www.iconfinder.com/icons/669948/download/png/128">
+    <link rel="icon" type="image/png" href="../img/ico.png">
 </head>
 
 <body>
